# python_project

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish.yml  python-tests.yml
tests/: test_main.py
